# lebot_robot_code

./: README.md
catkin_work/: .gitignore  README.md
catkin_work/src/driver_bot_cpp/: CMakeLists.txt  package.xml
catkin_work/src/driver_bot_cpp/actions/: CMakeLists.txt
catkin_work/src/driver_bot_cpp/actions/include/: actions2Wheels.h  actionsFactory.h
catkin_work/src/driver_bot_cpp/actions/src/: actions4Wheels.cpp  actionsFactory.cpp
catkin_work/src/driver_bot_cpp/assignment_one/: controll_motor.cpp  controll_motor.h
catkin_work/src/driver_bot_cpp/bcm2835-1.68/: Makefile  config.status
catkin_work/src/driver_bot_cpp/bcm2835-1.68/doc/: Makefile
catkin_work/src/driver_bot_cpp/bcm2835-1.68/src/: Makefile  bcm2835.h  test
catkin_work/src/driver_bot_cpp/bcm2835-1.68/src/.deps/: bcm2835.Po  test.Po
catkin_work/src/driver_bot_cpp/driving_on_command/include/: keys_move.h  keys_publisher.h
catkin_work/src/driver_bot_cpp/driving_on_command/src/: keys_move.cpp  keys_publisher.cpp
catkin_work/src/driver_bot_cpp/launch/: calibrate.launch  encoder_movement.launch  move_on_command.launch  power_test.launch
catkin_work/src/driver_bot_cpp/magicNumbers/: magicNumbers.h
catkin_work/src/driver_bot_cpp/motorDriver/: CMakeLists.txt
catkin_work/src/driver_bot_cpp/motorDriver/src/: adafruitmotorhat.cpp
catkin_work/src/driver_bot_cpp/motorImplementation/: CMakeLists.txt
catkin_work/src/driver_bot_cpp/motorImplementation/include/: motor2Wheels.h  motorFactory.h  motorInterface.h
catkin_work/src/driver_bot_cpp/motorImplementation/src/: motor4Wheels.cpp  motorFactory.cpp
catkin_work/src/driver_bot_cpp/msg/: distanceData.msg  distanceVelocity.msg  images.msg  keyStrokes.msg  qrCode.msg
catkin_work/src/driver_bot_cpp/nodes/include/: angle_node.h  camera_Subscriber.h  camera_node.h  encoder_node.h  object_detection_node.h  plot_data_transformation_node.h  power_node.h  qr_code_detection_node.h  rplidar_node.h  run.h
catkin_work/src/driver_bot_cpp/nodes/src/Calibrate/: calibrate.cpp  plotCalibrationData.py
catkin_work/src/driver_bot_cpp/nodes/src/Perceptions/: angle_node.cpp
catkin_work/src/driver_bot_cpp/nodes/src/Sensors/: camera_Subscriber.cpp  qr_code_detection_node.cpp  rplidar_node.cpp
catkin_work/src/driver_bot_cpp/nodes/src/plots/: connection_plot_to_app_node.js  encoder_node.cpp  package-lock.json  package.json  plot_data_transformation_node.cpp
catkin_work/src/driver_bot_cpp/nodes/src/power/: power_node.cpp  power_node.py
catkin_work/src/driver_bot_cpp/support_classes/: CMakeLists.txt  plot_data.py
catkin_work/src/driver_bot_cpp/support_classes/include/: ADS1115.h  INA219.h  angle_operations.h  draw_shapes.h  frame_analysis.h  overlap.h  qr_code_detection.h
catkin_work/src/driver_bot_cpp/support_classes/src/: ADS1115.cpp  INA219.cpp  angle_operations.cpp  distance_operations.cpp
catkin_work/src/driver_bot_cpp/support_classes/src/camera_operations/: overlap.cpp
catkin_work/src/driver_bot_cpp/test_drive/include/: key_movement_test.h  key_publisher_test.h
catkin_work/src/driver_bot_cpp/test_drive/src/: key_movement_test.cpp  key_publisher_test.cpp
catkin_work/src/driver_bot_cpp/track/client/: package.json
catkin_work/src/driver_bot_cpp/track/client/src/: App.js
catkin_work/src/driver_bot_cpp/track/client/src/data/: send_powerUp.h
catkin_work/src/driver_bot_cpp/track/client/src/hooks/: customScripts.js  request.js  sendImagesToApp.js  useResult.js
catkin_work/src/driver_bot_pkg/: CMakeLists.txt  login.txt  package.xml
catkin_work/src/driver_bot_pkg/launch/: driver.launch  move_on_command.launch
catkin_work/src/driver_bot_pkg/src/: angle_node.py  camera.py  distance_node.py  motor.py  object_detection_node.py  rplidar_node.py  run_node.py
catkin_work/src/driver_bot_pkg/src/msg/: distanceVelocity.msg
catkin_work/src/driver_bot_pkg/src/python/: run_node.py
catkin_work/src/driver_bot_pkg/src/python/Perceptions/: PerceptionInterface.py  (+1 more)
src/driver_bot_cpp/: CMakeLists.txt
src/driver_bot_cpp/actions/include/: actions4Wheels.h  actionsInterface.h
src/driver_bot_cpp/actions/src/: actions2Wheels.cpp
src/driver_bot_cpp/driving_on_command/include/: keys_move.h  keys_publisher.h
src/driver_bot_cpp/driving_on_command/src/: keys_move.cpp
src/driver_bot_cpp/general_interface/include/: generalInterface.h  terminalCommands.h
src/driver_bot_cpp/general_interface/src/: generalInterface.cpp
src/driver_bot_cpp/launch/: camera.launch  drivers.launch  move_on_command.launch  rplidar_node.launch
src/driver_bot_cpp/motorDriver/src/: pwm.cpp
src/driver_bot_cpp/motorImplementation/include/: MotorDetails.h  motor4Wheels.h
src/driver_bot_cpp/motorImplementation/src/: motor2Wheels.cpp
src/driver_bot_cpp/msg/: distanceVelocity.msg  lidar.msg  objectAngle.msg
src/driver_bot_cpp/nodes/include/: calibrate.h  distance_node.h  plot_data_transformation_node.h  qr_code_detection_subscriber.h
src/driver_bot_cpp/nodes/src/: run.cpp
src/driver_bot_cpp/nodes/src/Calibrate/: calibrate.cpp
src/driver_bot_cpp/nodes/src/Perceptions/: distance_node.cpp
src/driver_bot_cpp/nodes/src/Sensors/: camera_node.cpp  object_detection_node.cpp  qr_code_detection_subscriber.cpp  rplidar_node.cpp
src/driver_bot_cpp/nodes/src/plots/: connection_plot_to_app_node.js  package-lock.json  package.json  plot_data_transformation_node.cpp  plot_node.py
src/driver_bot_cpp/support_classes/: CMakeLists.txt
src/driver_bot_cpp/support_classes/include/: distance_operations.h
src/driver_bot_cpp/support_classes/src/camera_operations/: draw_shapes.cpp  frame_analysis.cpp  qr_code_detection.cpp
src/driver_bot_cpp/track/client/: package-lock.json  package.json
src/driver_bot_pkg/src/: key_publisher.py
src/driver_bot_pkg/src/msg/: lidar.msg
src/driver_bot_pkg/src/python/: motor.py
src/driver_bot_pkg/src/python/Perceptions/: FrameAnalyses.py  angle_node.py  object_detection_node.py
src/driver_bot_pkg/src/python/Sensors/: camera_node.py
src/driver_bot_pkg/src/python/actions/: navigationData.py
src/driver_bot_pkg/src/python/keyBoardDriving/: keys_move.py
(+6 files in other folders)
